# sku_image_processer

./: .dockerignore  Cargo.toml  Dockerfile  Makefile  README.md  gz_sku_img_resize  img_add_watermark.sh  img_process.sh
src/: main.rs  prelude.rs
